--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 * {
-    background-color: skyblue;
+    background-color: rgb(58, 57, 54);
 }
 
 div {
-    border: 1px solid #000;
+    border: 1px solid rgb(255, 255, 255);
 }
 
 .container-all {
@@ -14,7 +14,7 @@ div {
 #sidebar {
     width: 250px;
     height: 100%;
-    background-color: indigo;
+    background-color: rgb(77, 77, 77);
     color: white;
     transition: 1s;
 }
@@ -35,7 +35,7 @@ div {
     position: relative;
     top: 1%;
     left: 260px;
-    background-color: indigo;
+    background-color: rgb(77, 77, 77);
     color: white;
     border: none;
     font-size: 30px;
@@ -43,7 +43,7 @@ div {
 }
 
     .collapse-btn:hover {
-        background-color: rgb(120, 5, 203);
+        background-color: rgb(105, 105, 105);
         transition: 0.4s;
     }
 
@@ -63,7 +63,7 @@ div {
 }
 
     #sidebar ul li a:hover {
-        color: indigo;
+        color: rgb(77, 77, 77);
         background: #fff;
     }
 
@@ -103,7 +103,7 @@ ul ul li a {
 }
 
 
-/*=====================¶Â¦W³æ====================*/
+/*=====================ï¿½Â¦Wï¿½ï¿½====================*/
 .blacklist {
     /*border: none;*/
 }
