--- a/css/CboardsPage.css
+++ b/css/CboardsPage.css
@@ -1,19 +1,64 @@
+a{
+    text-decoration:none;
+}
+a:link{
+    background-color:#ffffff;
+    text-decoration:none;
+
+    }
+a:visited {
+    color:#ffffff;
+    background-color:red;
+    }
+a:hover {
+    text-decoration:underline;
+    color:gray;
+    }
+a:active {
+    text-decoration:none;
+    background-color:gray;
+    color:#fafafa;
+    }
 .Cboard {
-    padding: 60px;
-    margin: 50px;
+    padding: 30px;
+    margin: 10px;
     border: none;
 }
 
+    .Cboard .StampButton{
+        font-size: 33px;
+       
+    }
+    .Cboard .Sbtn{
+        color: antiquewhite; border:0;
+        background-color:#181717;
+        color:#fff;
+        border: 2px solid #ca672e;
+        border-radius:10px;
+        cursor:pointer;}
+      
+        .Cboard .Sbtn:hover{
+        color:#fff;
+        background-color:rgb(22, 21, 21);
+        border:2px #851a1a solid;
+        }
     .Cboard h1 {
         margin-left: 50px;
         font-size: 50px
     }
+    .Cboard .postP{
+    }
+
+    .Cboard .imgPostP{
+        height: 50%;
+    }
 
     .Cboard .content {
         padding: 20px;
-        margin: 40px;
+        margin: 20px;
         margin-top: 20px;
-        margin-right: 120px;
+        margin-right: 20px;
+        float: left;
     }
 
         .Cboard .content .article {
@@ -23,7 +68,7 @@
 
 
             .Cboard .content .article h6 {
-                font-size: 40px;
+                font-size: 36px;
             }
 
 
@@ -42,7 +87,9 @@
             }
 
             .Cboard .content .article h4 {
-                font-size: 20px;
+                font-size: 14px;
                 float: right;
+                margin-top: 5px;
+
                 margin-right: 30px;
             }
