--- a/css/CboardsPage.css
+++ b/css/CboardsPage.css
@@ -46,8 +46,6 @@ a:active {
         margin-left: 50px;
         font-size: 50px
     }
-    .Cboard .postP{
-    }
 
     .Cboard .imgPostP{
         height: 50%;
@@ -71,11 +69,9 @@ a:active {
                 font-size: 36px;
             }
 
-
-
             .Cboard .content .article p {
                 font-size: 20px;
-                background-color: gray;
+                background-color: rgb(44, 44, 44);
                 line-height: 60px;
                 height: 100px;
                 width: 70%;
