--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 * {
-    background-color: rgb(58, 57, 54);
+    background-color: #181717;
 }
 
 div {
-    border: 1px solid rgb(255, 255, 255);
+    /* border: 1px solid rgb(255, 255, 255); */
 }
 
 .container-all {
