--- a/Main.Master
+++ b/Main.Master
@@ -8,22 +8,10 @@
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
+
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <script src="js/bootstrap.js"></script>
-    <script src="js/jquery.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <script>
-        //  展開/收合按鈕
-        $(document).ready(function () {
-
-            $("#collapse").on("click", function () {
-
-                $("#sidebar").toggleClass("active");
-                $(".fa-align-left").toggleClass("fa-chevron-circle-right");
-            })
-        })</script>
-
 </head>
 <body>
     <form id="form1" runat="server">
@@ -41,30 +29,30 @@
                         <div>
                             <!-- List 列表 -->
                             <p>母版塊列表 </p>
-                            <a href="/index.aspx">首頁Home <i class="fas fa-home"></i></a>
+                            <a href="/HomePage.aspx">首頁Home <i class="fas fa-home"></i></a>
                             <br>
                             <asp:Repeater ID="Repeater1" runat="server">
                                 <ItemTemplate>
-                                    <%--<a href="Pboard.aspx?PboardID=<%# Eval("PboardID")%>" title="<%# Eval("Pname") %>">--%>
                                     <asp:Label runat="server"><%# Eval("Pname") %></asp:Label><br>
                                 </ItemTemplate>
                             </asp:Repeater>
-                        
-                        <%--後台人員才能看到--%>
-                        <asp:PlaceHolder ID="plhPBMode1" runat="server" Visible="false">
-                            <asp:Button ID="btnPBMode1" runat="server" Text="編輯母版塊" OnClick="btnPBMode_Click" />
-                        </asp:PlaceHolder>
-                        <asp:PlaceHolder ID="plhPBEdit1" runat="server" Visible="false">
-                            <div>
-                                <asp:Button ID="btnPBUp1" runat="server" Text="上移" />
-                                <asp:Button ID="btnPBDown1" runat="server" Text="下移" />
-                            </div>
-                            <div>
-                                <asp:Button ID="btnPBSave1" runat="server" Text="儲存" OnClick="btnPBSave_Click" />
-                                <asp:Button ID="btnPBCancel" runat="server" Text="取消" OnClick="btnPBCancel_Click" />
-                            </div>
-                        </asp:PlaceHolder>
-                            </div>
+
+                            <%--後台人員才能看到--%>
+                            <asp:PlaceHolder ID="plhPBMode1" runat="server" Visible="false">
+                                <asp:Button ID="btnPBMode1" runat="server" Text="編輯母版塊" OnClick="btnPBMode_Click" />
+                            </asp:PlaceHolder>
+                            <asp:PlaceHolder ID="plhPBEdit1" runat="server" Visible="false">
+                                <div>
+                                    <%--                                    <asp:Button ID="btnPBUp1" runat="server" Text="上移" OnClick="btnPBMoveUp1_Click" />
+                                    <asp:Button ID="btnPBDown1" runat="server" Text="下移" OnClick="btnPBDown1_Click" />--%>
+                                </div>
+                                <asp:TextBox ID="tbxPBCreate" runat="server"></asp:TextBox><asp:Button ID="btnPBCreate" runat="server" Text="新增" />
+                                <div>
+                                    <asp:Button ID="btnPBSave1" runat="server" Text="儲存" OnClick="btnPBSave_Click" />
+                                    <asp:Button ID="btnPBCancel" runat="server" Text="取消" OnClick="btnPBCancel_Click" />
+                                </div>
+                            </asp:PlaceHolder>
+                        </div>
                     </nav>
                 </div>
             </div>
@@ -75,7 +63,7 @@
                     <!-- 上區塊內的左上區塊(LOGO & 搜尋) -->
                     <!-- sm為4格，md為4格，lg為4格，置中-->
                     <div class="col-sm-4 col-md-4 col-lg-3">
-                        <a href="index.html" class="d-none d-sm-block">
+                        <a href="HomePage.html" class="d-none d-sm-block">
                             <img src="images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
                         <div action="連結到搜尋結果的.aspx" class="d-flex d-none d-sm-block">
                             <asp:TextBox runat="server" ID="txtSearch" Text="搜尋" class="form-control"></asp:TextBox>
@@ -91,7 +79,7 @@
                     <!-- 上區塊內的中間區塊(LOGO & 網站標題) -->
                     <!-- sm為4格，md為4格，lg為4格，置中-->
                     <div class="col-sm-4 col-md-4 col-lg-5 h3 text-center">
-                        <a href="/index.aspx" class="d-block d-sm-none">
+                        <a href="/HomePage.aspx" class="d-block d-sm-none">
                             <img src="images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
                         MKForun
                     </div>
@@ -99,40 +87,17 @@
                     <!-- xs.sm時隱藏，sm以上顯示，sm為4格，md為4格，lg為4格，置中-->
                     <div class="d-none d-sm-block col-sm-4 col-md-4 col-lg-4  text-center ">
                         使用者狀態區
-
-
-
                     </div>
                 </div>
-
-
-                <!-- 固定母版塊 -->
+                <!-- 下方 -->
                 <div class="container-fluid">
                     <div class="row">
+                        <!-- 固定母版塊 -->
                         <!-- xs.sm時隱藏，md以上顯示，md為2格 -->
-                        <div class="d-none d-md-block col-md-2">
-                            <a href="/index.aspx">首頁Home <i class="fas fa-home"></i></a>
+                        <div class="d-none d-md-block col-md-2" id="PBArea">
+                            <a href="/HomePage.aspx">首頁Home <i class="fas fa-home"></i></a>
                             <br>
-                            <asp:Repeater ID="Repeater2" runat="server">
-                                <ItemTemplate>
-                                    <%--<a href="Pboard.aspx?PboardID=<%# Eval("PboardID")%>" title="<%# Eval("Pname") %>">--%>
-                                    <asp:Label runat="server"><%# Eval("Pname") %></asp:Label><br>
-                                </ItemTemplate>
-                            </asp:Repeater>
-                            <%--後台人員才能看到--%>
-                            <asp:PlaceHolder ID="plhPBMode2" runat="server">
-                                <asp:Button ID="btnPBMode2" runat="server" Text="Button" OnClick="btnPBMode_Click"/>
-                            </asp:PlaceHolder>
-                            <asp:PlaceHolder ID="plhPBEdit2" runat="server" Visible="false">
-                                <div>
-                                    <asp:Button ID="btnPBUp2" runat="server" Text="上移" />
-                                    <asp:Button ID="btnPBDown2" runat="server" Text="下移"/>
-                                </div>
-                                <div>
-                                    <asp:Button ID="btnPBSave2" runat="server" Text="儲存" OnClick="btnPBSave_Click"/>
-                                    <asp:Button ID="btnPBCancel2" runat="server" Text="取消" OnClick="btnPBCancel_Click"/>
-                                </div>
-                            </asp:PlaceHolder>
+                            <div id="PBDataList"></div>
 
                         </div>
                         <!--主內容區，sm為12格，md為8格 -->
@@ -145,30 +110,132 @@
 
                         <%--黑名單，xs.sm時隱藏，md以上顯示，md為2格--%>
                         <div class="d-none d-md-block col-md-2">
-                            <div class="blacklist">
-                                <div class="BLsearch">
-                                    <asp:TextBox ID="txtBLsearch" runat="server" placeholder="(輸入懲處會員帳號)"></asp:TextBox>
-                                    <asp:Button ID="btnBLsearch" runat="server" Text="確認" />
-                                </div>
-
-                                <div class="BLmember">
-                                    <h1>懲罰中名單</h1>
-                                    <asp:Label ID="lblBlmember" runat="server" Text="Luck333gaga"></asp:Label>
-                                    <asp:Button ID="btnBlmember" runat="server" Text="解除" />
-
-                                    <asp:Label ID="Label1" runat="server" Text="Luck333gaga"></asp:Label>
-                                    <asp:Button ID="Button1" runat="server" Text="解除" />
-
-                                    <asp:Label ID="Label2" runat="server" Text="Luck333gaga"></asp:Label>
-                                    <asp:Button ID="Button2" runat="server" Text="解除" />
-                                </div>
+                            <div class="BLmember">
+                                <asp:PlaceHolder ID="plhBlk" runat="server" Visible="false">
+                                    <h3>黑名單</h3>
+                                    <br>
+                                    <asp:TextBox ID="txtBlkAcc" runat="server" placeholder="(輸入懲處會員帳號)"></asp:TextBox>
+                                    <asp:TextBox ID="txtBlkDate" runat="server" placeholder="(輸入懲處期限)"></asp:TextBox>
+                                    <asp:Button ID="btnBlk" runat="server" Text="確認" OnClick="btnBlk_Click" />
+                                    <asp:Repeater ID="RptrBlk" runat="server">
+                                        <ItemTemplate>
+                                            <asp:Literal ID="ltlBlkID" runat="server" Text='<%# Eval("Account") %>' /><br />
+                                            <asp:Literal ID="ltlDate" runat="server" Text='<%# Eval("ReleaseDate")%>' />
+                                        </ItemTemplate>
+                                    </asp:Repeater>
+                                </asp:PlaceHolder>
+                            </div>
+                            <div class="MMlist">
+                                <asp:PlaceHolder ID="plhMM" runat="server" Visible="false">
+                                    <h3>版主名單</h3>
+                                    <br>
+                                    <asp:TextBox ID="txtMMAcc" runat="server" placeholder="(輸入懲處會員帳號)"></asp:TextBox>
+                                    <asp:Button ID="btnMM" runat="server" Text="確認" OnClick="btnBlk_Click" />
+                                    <asp:Repeater ID="RptrMM" runat="server">
+                                        <ItemTemplate>
+                                            <asp:Literal ID="ltlMMID" runat="server" Text='<%# Eval("MemberID") %>' />
+                                            <br />
+                                        </ItemTemplate>
+                                    </asp:Repeater>
+                                </asp:PlaceHolder>
                             </div>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </form>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script>
+        //  展開/收合按鈕
+        $(document).ready(function () {
+
+            $("#collapse").on("click", function () {
+
+                $("#sidebar").toggleClass("active");
+                $(".fa-align-left").toggleClass("fa-chevron-circle-right");
+            })
+        });
+    </script>
+    <script>
+        $(document).ready(function () {
+            //取得母版
+            $.ajax({
+                url: "/API/PBoardInMain.ashx",
+                method: "GET",
+                dataType: "JSON",
+                success: function (jsonText) {
+                    var rowsText = "";
+                    for (var item of jsonText) {
+                        rowsText += `
+                        <tr>
+                              <div>
+                                  <p name="PboardID" value="${item.PboardID}">${item.Pname}</p>
+                                  <p name="Pname" value="${item.Pname}" ></p>
+                                  <p name="Pshow" value="${item.Pshow}" ></p>
+                                  <p name="Porder" value="${item.Porder}" ></p>
+<input type="submit" name="btnNext" value="測試" id="btnNext" class="btn btn-primary btn-sm">
+                                  <button id="btnPBMoveUp" type="button" class="btn-outline-primary btnPBMoveUp" data-bs-target="#btnPBMoveUp">上移</button>
+                                  <button type="button" class="btn-outline-primary PBDataList_btnPBMoveDown_0" data-bs-target="#btnPBMoveDown">下移</button>
+                                  <button type="button" class="btn-outline-primary PBDataList_btnPBHide_0" data-bs-target="#btnPBHide">隱藏</button>
+                              </div>
+                            </td>
+                        </tr>
+                        `;
+                    }
+                    $("#PBDataList").append("<table>" + rowsText + "</table>");
+                    console.log(jsonText);
+                    alert("成功載入母版塊");
+                },
+                error: function (msg) {
+                    console.log(msg);
+                    alert("母版塊載入失敗，請聯絡管理員。");
+                }
+            });
+
+            //#ID選擇棄 .class選擇棄
+            //測試用
+            $('#btnNext').click(function () {
+                alert("確定按下下一步嗎?");
+            });
+
+            //捕捉PBDataList裡面，所有的click事件，class符合btnPBMoveUp
+            //上移母版
+            $("#PBDataList").on('click',".btnPBMoveUp",function () {
+                alert("按鈕事件，尚未載入API");
+
+                var container = $("#btnPBMoveUp");
+                var postData = {
+                    "PboardID": $("p[name*=PboardID]", container).val(),
+                    //"Pname": $("input[name=txtName]", container).val(),
+                    "Porder": $("p[name=Porder]", container).val(),
+                };
+                $.ajax({
+                    url: "/API/PBoardInMain.ashx?Action=MoveUp",
+                    method: "POST",
+                    data: postData,
+                    //dataType: "JSON",
+                    success: function (txtMsg) {
+                        //alert(objData);
+                        console.log(txtMsg);
+                        if (txtMsg == "OK") {
+                            alert("更新成功");
+                        } else {
+                            alert("更新失敗，請聯絡管理員");
+                        }
+                    },
+                    error: function (msg) {
+                        console.log(msg);
+                        alert("通訊失敗，請聯絡管理員。")
+                    }
+                });
+            });
+
+
+
+        });
+
+    </script>
 </body>
 </html>
